Added settings page

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,13 +22,14 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.android.support:design:23.1.1'
+
+    compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.android.support:design:23.2.1'
     compile 'com.google.android.gms:play-services-auth:8.4.0'
     compile 'org.eclipse.jgit:org.eclipse.jgit:3.7.1.201504261725-r'
     compile 'org.slf4j:slf4j-simple:1.6.1'
     compile 'org.kohsuke:github-api:1.73'
-    compile "com.google.android.gms:play-services-gcm:8.4.0"
-
+    compile 'com.google.android.gms:play-services-gcm:8.4.0'
+    compile 'com.android.support:support-v4:23.2.1'
 }
 apply plugin: 'com.google.gms.google-services'
